--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,10 @@
 $space-large: 2.5rem;
+$title-color: #555;
 
 .page-title {
   margin-top: $space-large;
   margin-bottom: $space-large;
+  color: $title-color;
 }
 
 input[type=search] {
